@@ -1,3 +1,7 @@
+2005-10-21  Jonathan Pryor  <jonpryor@vt.edu>
+
+	* Mono.Posix.dll.sources: Add new file: Mono.Unix/FileAccessPattern.cs
+
 2005-10-19  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* Mono.Posix.dll.sources: Add new files: Mono.Unix/FileAccessPermissions.cs,
